--- a/css/styles.css
+++ b/css/styles.css
@@ -16,9 +16,11 @@
   --danger-color: #dc3545;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
+
 /* Global Styles */
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Montserrat','Open Sans', sans-serif;
   background-color: var(--background-color);
   margin: 0;
   padding: 0;
@@ -30,20 +32,40 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .hero {
-  height: 90vh;
-  background-image: url('../images/hero2.jpg');
-  background-size: cover;
-  background-position: center;
+  background: url('images/coffee-bg1.jpg') no-repeat center center/cover;
+  height: 100vh;
+  color: #fff;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   text-align: center;
-  background-repeat: no-repeat;
+  position: relative;
+}
+
+.hero::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .hero-content {
-  max-width: 800px;
-  color: var(--light-color);
+  position: relative;
+  z-index: 1;
+}
+
+.hero h1 {
+  font-size: 3rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+
+.hero p {
+  font-size: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 
 .button-hero{
@@ -75,14 +97,59 @@ h1, h2, h3, h4, h5, h6 {
   transition: width 0.3s;
 }
 
-.navbar {
-  transition: background-color 0.5s ease;
+header {
+  background-color: #f8f9fa;
+  color: #343a40;
+  text-align: center;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+header p {
+  padding: 5px;
+  color: #1c1c1c;
+  margin: 0;
+  font-size: 0.8rem;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.navbar {
+  background: linear-gradient(90deg, #6f4e37, #1c1c1c);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.navbar-brand {
+  color: #f8f9fa !important;
+  font-size: 1.5rem;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.navbar-nav .nav-link {
+  color: #f8f9fa !important;
+  text-transform: uppercase;
+  font-size: 0.95rem;
+  margin: 0 0.5rem;
+  transition: color 0.3s ease;
+}
+
+
 .navbar-dark .navbar-nav .nav-link.active {
+  color: #fff;
   text-decoration: underline;
 }
 
+header a {
+  text-decoration: none;
+  color: #1c1c1c;
+}
+
+header a:hover
+{
+    text-decoration: underline;
+    color: #1c1c1c;
+  
+}
 /* About Section Styles */
 .about-title {
   font-size: 2.5rem;
