--- a/css/styles.css
+++ b/css/styles.css
@@ -32,14 +32,15 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .hero {
-  background: url('/perosa/images/skupaj-produkti/IMG_0137.jpg') no-repeat center center/cover;
-  height: 100vh;
+  background: url('/perosa/images/skupaj-produkti/IMG_0169.jpg') no-repeat center center/cover;
+  height: 90svh;
   color: #fff;
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
   position: relative;
+  object-position: bottom;
 }
 
 .hero::before {
@@ -50,6 +51,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
+  object-position: bottom;
 }
 
 .hero-content {
@@ -77,6 +79,10 @@ h1, h2, h3, h4, h5, h6 {
   background: transparent;
   border: 2px solid var(--light-color);
   color: var(--light-color);
+  box-shadow: none;
+  padding: 0.75rem 2rem;
+  border-radius: 5px;
+  font-size: large;
 }
 
 .button-hero:hover{
@@ -84,13 +90,14 @@ h1, h2, h3, h4, h5, h6 {
   background: var(--light-color);
   color: var(--primary-color);
   border: 2px solid var(--light-color);
+  box-shadow: none;
 }
 
 .button-hero:active{
   transition: all 0.3s ease-in;
   background: var(--background-color);
   color: var(--primary-color);
-  border: 2px solid var(--light-color);
+  box-shadow: none;
 }
 
 .button-hero::after{
@@ -100,6 +107,7 @@ h1, h2, h3, h4, h5, h6 {
   height: 2px;
   background: var(--light-color);
   transition: width 0.3s;
+  box-shadow: none;
 }
 
 .carousel-item {
@@ -108,7 +116,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .carousel-item img {
-  max-height: 100px;
+  max-height: 70px;
   object-fit: contain;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   margin: 0 auto;
@@ -143,8 +151,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 header {
-  background-color: #f8f9fa;
-  color: #343a40;
+  background: linear-gradient(90deg, #ffffff, #afafaf);
   text-align: center;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
@@ -153,7 +160,7 @@ header p {
   padding: 5px;
   color: #1c1c1c;
   margin: 0;
-  font-size: 0.8rem;
+  font-size: 14px;
   font-weight: 700;
   text-transform: uppercase;
 }
@@ -199,13 +206,13 @@ header a:hover
 .about-title {
   font-size: 2.5rem;
   font-weight: 700;
-  color: var(--accent-color);
+  color: var(--primary-color);
 }
 
 .about-subtitle {
   font-weight: 600;
   margin-bottom: 1.5rem;
-  color: var(--secondary-color);
+  color: #6f4e37;
 }
 
 .feature-box, .service-box {
@@ -214,6 +221,7 @@ header a:hover
   padding: 1.5rem;
   background-color: var(--light-color);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  min-height: 170px;
 }
 
 .feature-box:hover, .service-box:hover {
@@ -234,7 +242,7 @@ header a:hover
 }
 
 .feature-icon:hover {
-  color: var(--dark-accent-color); /* Darker shade on hover */
+  color:  var(--dark-color) /* Darker shade on hover */
 }
 
 .feature-content p, .service-box p {
@@ -242,7 +250,7 @@ header a:hover
 }
 
 .feature-title, .service-title {
-  color: var(--primary-color);
+  color: var(#6f4e37);
 }
 
 .feature-box p, .service-box p {
@@ -251,7 +259,17 @@ header a:hover
 
 .about-contact-title {
   font-weight: 600;
-  color: var(--accent-color);
+  color: var(#6f4e37);
+}
+
+.about-email {
+  color: var(--primary-color);
+}
+
+.about-email:hover {
+  text-decoration: underline;
+  color: var(--primary-color);
+
 }
 
 /* Contact Section Styles */
@@ -263,7 +281,7 @@ header a:hover
 }
 
 .contact h2 {
-  color: var(--accent-color);
+  color: var(#6f4e37);
   margin-bottom: 1rem;
 }
 
@@ -276,9 +294,10 @@ header a:hover
   color: var(--light-color);
 }
 
-.contact .btn-primary {
-  background-color: var(--accent-color);
-  border-color: var(--accent-color);
+.contact .form-button {
+  background-color: #6f4e37;
+  border-color: var(--light-color);
+  color: var(--light-color);
 }
 
 .contact .btn-primary:hover {
