--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
+
 :root {
   /* Color Palette */
   --primary-color: #2b2d42;
@@ -23,8 +25,6 @@
   --warning-color: #ffc107;
   --danger-color: #dc3545;
 }
-
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
 
 /* Global Styles */
 body {
@@ -179,23 +179,30 @@ header p {
 }
 
 .navbar {
-  background: linear-gradient(90deg, #6f4e37, #1c1c1c);
+  /* background: linear-gradient(90deg, #6f4e37, #1c1c1c); */
+  background: #0b0b0b;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
+.Logo-image {
+  width: 100px;
+}
+
 .navbar-brand {
-  color: #f8f9fa !important;
+  /* color: #f8f9fa !important;
   font-size: 1.5rem;
   font-weight: 700;
-  text-transform: uppercase;
+  text-transform: uppercase; */
+  margin-bottom: 6px;
 }
 
 .navbar-nav .nav-link {
-  color: #f8f9fa !important;
+  color: #fff !important;
   text-transform: uppercase;
   font-size: 0.95rem;
   margin: 0 0.5rem;
   transition: color 0.3s ease;
+  text-wrap: nowrap;
 }
 
 
