--- a/css/cialde.css
+++ b/css/cialde.css
@@ -9,7 +9,7 @@ section {
 
 /* Hero Section */
 .hero {
-  background: url('/perosa/images/skupaj-produkti/IMG_0139\(1\).jpg') no-repeat center center/cover;
+  background: url('../images/cialde/IMG_0177.jpg') no-repeat center center/cover;
   height: 90vh;
   color: #fff;
   display: flex;
@@ -110,16 +110,21 @@ section {
 }
 
 #cialde-products .product-display img {
-  max-height: 65%;
-  object-fit: cover;
+  width: 100%; /* Ensure the image takes the full width of its container */
+  height: 400px; /* Set a fixed height to make the image square */
+  object-fit: cover; /* Ensure the image covers the entire area */
+  object-position: center; /* Center the image */
   border-radius: 10px;
-  transition: transform 0.3s ease;
-  width: 100%;
+  transition: transform 0.3s ease, box-shadow 0.3s ease; /* Smooth transition for transform and box-shadow */
+  transform: scale(0.7); /* Zoom out the image */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
 }
 
 #cialde-products .product-display img:hover {
-  transform: scale(1.05);
+  transform: scale(0.8); /* Slightly zoom in on hover */
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Enhance shadow on hover */
 }
+
 
 #cialde-products .product-display h3 {
   color: var(--primary-color);
@@ -150,7 +155,7 @@ section {
   font-style: italic;
 }
 
-.row{
+.row {
   display: flex;
   align-items: center;
   justify-content: center;
